feat(price): add bonus 1.3.0 currency support
