# src/main/java/com/gft/products/infrastructure/adapter/in/rest/dto/CreatePriceRequest.java
@@ -1,7 +1,10 @@
 package com.gft.products.infrastructure.adapter.in.rest.dto;
 
+import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Pattern;
 import jakarta.validation.constraints.Positive;
+import jakarta.validation.constraints.Size;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -10,6 +13,11 @@ public record CreatePriceRequest(
     @NotNull
     @Positive
     BigDecimal value,
+
+    @NotBlank
+    @Size(min = 3, max = 3)
+    @Pattern(regexp = "^[A-Za-z]{3}$")
+    String currency,
 
     @NotNull
     LocalDate initDate,
