# src/main/java/com/gft/products/infrastructure/adapter/in/rest/dto/CurrentPriceResponse.java
@@ -3,6 +3,7 @@ package com.gft.products.infrastructure.adapter.in.rest.dto;
 import java.math.BigDecimal;
 
 public record CurrentPriceResponse(
-    BigDecimal value
+    BigDecimal value,
+    String currency
 ) {
 }
