# src/main/java/com/gft/products/infrastructure/adapter/in/rest/dto/PriceResponse.java
@@ -5,6 +5,7 @@ import java.time.LocalDate;
 
 public record PriceResponse(
     BigDecimal value,
+    String currency,
     LocalDate initDate,
     LocalDate endDate
 ) {
